github icon added

--- a/index.html
+++ b/index.html
@@ -469,8 +469,15 @@
               >
             </li>
             <li class="footer-list">
-              <a href="https://www.linkedin.com/" target="_blank"
+              <a href="https://www.linkedin.com" target="_blank"
                 ><i class="fa fa-linkedin"></i>Linkdin</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/havecodesoft/Online-shopping"
+                target="_blank"
+                ><i class="fa fa-github"></i>Github</a
               >
             </li>
           </ul>
