--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Welcome to our online clothing store, where you'll find the latest fashion trends for men and women! We offer a wide range of clothing items, from stylish tops and dresses to comfortable jeans and jackets. Our collection includes items for all occasions, from casual wear to formal events, and we constantly update our inventory to ensure you stay ahead of the fashion curve. Our website is easy to use, with simple navigation and a user-friendly interface. Plus, our secure checkout process ensures your information is kept safe. Shop with us today and discover your new favorite wardrobe pieces!"
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://i.ibb.co/93mjxLv/close-up-hands-touching-clothes.jpg"
     />
@@ -17,7 +17,14 @@
       content="https://i.ibb.co/93mjxLv/close-up-hands-touching-clothes.jpg"
     />
     <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image:height" content="630" /> -->
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/93mjxLv/close-up-hands-touching-clothes.jpg"
+    />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:width" content="200" />
+    <meta property="og:image:height" content="200" />
 
     <link rel="stylesheet" href="style.css" />
     <link
