--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         </div>
       </div>
       <div class="copy-right">
-        <small>&copy; Copyright<span class="year">2023</span></small>
+        <small>&copy; Copyright<span class="year"></span></small>
         <small>All right reserved</small>
       </div>
     </footer>
