--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
               </tr>
               <tr>
                 <td>1887/13</td>
-                <td>Yilkal Mekonin</td>
+                <td>Yilkal Tesfaye</td>
               </tr>
             </tbody>
           </table>
@@ -496,7 +496,7 @@
         </div>
       </div>
       <div class="copy-right">
-        <small>&copy; Copyright<span class="year"></span></small>
+        <small>&COPY; Copyright<span class="year"></span></small>
         <small>All right reserved</small>
       </div>
     </footer>
