--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <title>Hokey online shopping</title>
   </head>
   <body>
+    <div class="pre-loader"></div>
     <header id="nav">
       <nav>
         <ul class="ul-el">
