--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
           <img
             src="./close-up-hands-touching-clothes.jpg"
-            class="home-img"
+            class="home-img img-pop"
             alt=""
           />
         </div>
@@ -102,12 +102,20 @@
           <div class="holder">
             <!-- starts here -->
             <div class="home-hero">
-              <img src="t-shirt1.png" alt="" class="showcase-img imgs" />
+              <img
+                src="t-shirt1.png"
+                alt=""
+                class="showcase-img imgs image-sliders"
+              />
               <div class="product-desc">
                 <p>White T-shirt with short sleeves</p>
                 <span>$39.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders img-pop"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
@@ -115,13 +123,17 @@
               <img
                 src="t-shirt2.png"
                 alt=""
-                class="showcase-img imgs small-img"
+                class="showcase-img imgs image-sliders small-img"
               />
               <div class="product-desc">
                 <p>Black short sleeve T-shirt cotton</p>
                 <span>$49.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
@@ -129,13 +141,17 @@
               <img
                 src="t-shirt3.webp"
                 alt=""
-                class="showcase-img imgs big-img"
+                class="showcase-img imgs image-sliders big-img"
               />
               <div class="product-desc">
                 <p>White T-shirt short sleeve polister</p>
                 <span>$35.65</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
@@ -143,64 +159,108 @@
               <img
                 src="t-shirt4.png"
                 alt=""
-                class="showcase-img imgs blue-big"
+                class="showcase-img imgs image-sliders blue-big"
               />
               <div class="product-desc">
                 <p>Blue short sleeve T-shirt cotton</p>
                 <span>$45.59</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
             <!-- ends here -->
             <div class="home-hero">
-              <img src="cap2.png" alt="" class="showcase-img imgs" />
+              <img
+                src="cap2.png"
+                alt=""
+                class="showcase-img imgs image-sliders"
+              />
               <div class="product-desc">
                 <p>White cap in various styles including wool, or straw</p>
                 <span>$6.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
             <div class="home-hero">
-              <img src="cap3.webp" alt="" class="showcase-img imgs small-img" />
+              <img
+                src="cap3.webp"
+                alt=""
+                class="showcase-img imgs image-sliders small-img"
+              />
               <div class="product-desc">
                 <p>Black a baseball cap, beanie wool, or straw</p>
                 <span>$9.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
             <div class="home-hero">
-              <img src="cap4.png" alt="" class="showcase-img imgs big-img" />
+              <img
+                src="cap4.png"
+                alt=""
+                class="showcase-img imgs image-sliders big-img"
+              />
               <div class="product-desc">
                 <p>White cap in various styles including cotton</p>
                 <span>$5.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
             <div class="home-hero">
-              <img src="cap5.png" alt="" class="showcase-img imgs blue-big" />
+              <img
+                src="cap5.png"
+                alt=""
+                class="showcase-img imgs image-sliders blue-big"
+              />
               <div class="product-desc">
                 <p>White cap in various styles wool, or straw</p>
                 <span>$7.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
             <div class="home-hero">
-              <img src="hoodie1.png" alt="" class="showcase-img imgs" />
+              <img
+                src="hoodie1.png"
+                alt=""
+                class="showcase-img imgs image-sliders"
+              />
               <div class="product-desc">
                 <p>White hoodie cotton with different style</p>
                 <span>$79.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
@@ -208,23 +268,35 @@
               <img
                 src="hoodie2.png"
                 alt=""
-                class="showcase-img imgs small-img"
+                class="showcase-img imgs image-sliders small-img"
               />
               <div class="product-desc">
                 <p>Blue hoodie fabric with different style</p>
                 <span>$89.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
             <div class="home-hero">
-              <img src="hoodie3.png" alt="" class="showcase-img imgs big-img" />
+              <img
+                src="hoodie3.png"
+                alt=""
+                class="showcase-img imgs image-sliders big-img"
+              />
               <div class="product-desc">
                 <p>Red hoodie fabric with different style</p>
                 <span>$59.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
@@ -232,23 +304,35 @@
               <img
                 src="hoodie4.png"
                 alt=""
-                class="showcase-img imgs blue-big"
+                class="showcase-img imgs image-sliders blue-big"
               />
               <div class="product-desc">
                 <p>Black hoodie cotton with different styles</p>
                 <span>$69.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
             <div class="home-hero">
-              <img src="socks4.webp" alt="" class="showcase-img imgs" />
+              <img
+                src="socks4.webp"
+                alt=""
+                class="showcase-img imgs image-sliders"
+              />
               <div class="product-desc">
                 <p>Black and white socks Large</p>
                 <span>$3.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
@@ -256,33 +340,53 @@
               <img
                 src="socks2.png"
                 alt=""
-                class="showcase-img imgs small-img"
+                class="showcase-img imgs image-sliders small-img"
               />
               <div class="product-desc">
                 <p>Black and white socks Large</p>
                 <span>$4.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
             <div class="home-hero">
-              <img src="socks3.webp" alt="" class="showcase-img imgs big-img" />
+              <img
+                src="socks3.webp"
+                alt=""
+                class="showcase-img imgs image-sliders big-img"
+              />
               <div class="product-desc">
                 <p>Pink socks polister/cotton comffy</p>
                 <span>$3.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
             <div class="home-hero">
-              <img src="socks1.png" alt="" class="showcase-img imgs blue-big" />
+              <img
+                src="socks1.png"
+                alt=""
+                class="showcase-img imgs image-sliders blue-big"
+              />
               <div class="product-desc">
                 <p>Socks with different color collection</p>
                 <span>$5.99</span>
                 <button class="cart-add-btn">
-                  <img class="imgs" src="./shopping-cart.png" alt="" />
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
                 </button>
               </div>
             </div>
