--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li class="null"></li>
           </div>
           <li class="cart-count">
-            <span class="counting"></span>
+            <span class="counting">0</span>
             <img
               class="imgs counting-logo"
               src="counting-shopping-cart.png"
