--- a/index.html
+++ b/index.html
@@ -174,78 +174,7 @@
               </div>
             </div>
             <!-- ends here -->
-            <div class="home-hero">
-              <img
-                src="cap2.png"
-                alt=""
-                class="showcase-img imgs image-sliders"
-              />
-              <div class="product-desc">
-                <p>White cap in various styles including wool, or straw</p>
-                <span>$6.99</span>
-                <button class="cart-add-btn">
-                  <img
-                    class="imgs image-sliders"
-                    src="./shopping-cart.png"
-                    alt=""
-                  />
-                </button>
-              </div>
-            </div>
-            <div class="home-hero">
-              <img
-                src="cap3.webp"
-                alt=""
-                class="showcase-img imgs image-sliders small-img"
-              />
-              <div class="product-desc">
-                <p>Black a baseball cap, beanie wool, or straw</p>
-                <span>$9.99</span>
-                <button class="cart-add-btn">
-                  <img
-                    class="imgs image-sliders"
-                    src="./shopping-cart.png"
-                    alt=""
-                  />
-                </button>
-              </div>
-            </div>
-            <div class="home-hero">
-              <img
-                src="cap4.png"
-                alt=""
-                class="showcase-img imgs image-sliders big-img"
-              />
-              <div class="product-desc">
-                <p>White cap in various styles including cotton</p>
-                <span>$5.99</span>
-                <button class="cart-add-btn">
-                  <img
-                    class="imgs image-sliders"
-                    src="./shopping-cart.png"
-                    alt=""
-                  />
-                </button>
-              </div>
-            </div>
-            <div class="home-hero">
-              <img
-                src="cap5.png"
-                alt=""
-                class="showcase-img imgs image-sliders blue-big"
-              />
-              <div class="product-desc">
-                <p>White cap in various styles wool, or straw</p>
-                <span>$7.99</span>
-                <button class="cart-add-btn">
-                  <img
-                    class="imgs image-sliders"
-                    src="./shopping-cart.png"
-                    alt=""
-                  />
-                </button>
-              </div>
-            </div>
+            <!-- hoodie starts here -->
             <div class="home-hero">
               <img
                 src="hoodie1.png"
@@ -309,6 +238,159 @@
               <div class="product-desc">
                 <p>Black hoodie cotton with different styles</p>
                 <span>$69.99</span>
+                <button class="cart-add-btn">
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
+                </button>
+              </div>
+            </div>
+            <!-- hoodie part ends here -->
+            <!-- shoe part starts here -->
+            <div class="home-hero">
+              <img
+                src="shoe1.png"
+                alt=""
+                class="showcase-img imgs image-sliders"
+              />
+              <div class="product-desc">
+                <p>
+                  NEW Nike Air IV G Men's Size 14 Black/Fire Red-Cement
+                  CU9981-002
+                </p>
+                <span>$219.99</span>
+                <button class="cart-add-btn">
+                  <img
+                    class="imgs image-sliders img-pop"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="home-hero">
+              <img
+                src="shoe4.png"
+                alt=""
+                class="showcase-img imgs image-sliders small-img"
+              />
+              <div class="product-desc">
+                <p>NEW Nike G Men's Size 14 white/Fire</p>
+                <span>$249.99</span>
+                <button class="cart-add-btn">
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="home-hero">
+              <img
+                src="shoe3.png"
+                alt=""
+                class="showcase-img imgs image-sliders big-img"
+              />
+              <div class="product-desc">
+                <p>
+                  Nike Air Jordan 4 IV G (Mens Size 8) Shoes CU9981 001 Triple
+                  Black Cat Men's Size 14
+                </p>
+                <span>$135.65</span>
+                <button class="cart-add-btn">
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="home-hero">
+              <img
+                src="shoe2.png"
+                alt=""
+                class="showcase-img imgs image-sliders blue-big"
+              />
+              <div class="product-desc">
+                <p>New Nike running shoe</p>
+                <span>$125.59</span>
+                <button class="cart-add-btn">
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
+                </button>
+              </div>
+            </div>
+            <!-- shoe part ends here-->
+            <div class="home-hero">
+              <img
+                src="cap2.png"
+                alt=""
+                class="showcase-img imgs image-sliders"
+              />
+              <div class="product-desc">
+                <p>White cap in various styles including wool, or straw</p>
+                <span>$6.99</span>
+                <button class="cart-add-btn">
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="home-hero">
+              <img
+                src="cap3.webp"
+                alt=""
+                class="showcase-img imgs image-sliders small-img"
+              />
+              <div class="product-desc">
+                <p>Black a baseball cap, beanie wool, or straw</p>
+                <span>$9.99</span>
+                <button class="cart-add-btn">
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="home-hero">
+              <img
+                src="cap4.png"
+                alt=""
+                class="showcase-img imgs image-sliders big-img"
+              />
+              <div class="product-desc">
+                <p>White cap in various styles including cotton</p>
+                <span>$5.99</span>
+                <button class="cart-add-btn">
+                  <img
+                    class="imgs image-sliders"
+                    src="./shopping-cart.png"
+                    alt=""
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="home-hero">
+              <img
+                src="cap5.png"
+                alt=""
+                class="showcase-img imgs image-sliders blue-big"
+              />
+              <div class="product-desc">
+                <p>White cap in various styles wool, or straw</p>
+                <span>$7.99</span>
                 <button class="cart-add-btn">
                   <img
                     class="imgs image-sliders"
@@ -531,11 +613,11 @@
           <table>
             <tbody>
               <tr>
-                <th colspan="2" class="dev">Developers</th>
+                <td colspan="2" class="dev">Developers</td>
               </tr>
               <tr>
-                <th>Id</th>
-                <th>Name</th>
+                <td class="th">Id</td>
+                <td class="th">Name</td>
               </tr>
               <tr>
                 <td>2057/13</td>
