--- a/index.html
+++ b/index.html
@@ -497,14 +497,15 @@
                 comfortable all season long.
               </p>
             </div>
-            <div class="welcome-fourth welcome">
-              <h3>Socks</h3>
+            <div class="welcome-fifth welcome">
+              <h3>Shoes</h3>
               <p>
-                Our socks are made with a soft and durable fabric that provides
-                a comfortable fit all day long. Whether you're dressing up or
-                keeping it casual, our socks offer unbeatable comfort and style.
-                With a range of designs and colors to choose from, you'll find
-                the perfect pair to match any outfit.
+                Our shoes feature a modern and sleek design, making them a
+                versatile choice for any occasion. The breathable upper ensures
+                that your feet stay cool and dry, while the cushioned insole
+                provides added comfort and support. The durable outsole provides
+                excellent traction and ensures that you can wear these shoes
+                confidently on any surface.
               </p>
             </div>
             <div class="welcome-fifth welcome">
@@ -515,6 +516,16 @@
                 day out in the sun, offering the perfect blend of style and
                 comfort. With a variety of colors and designs to choose from,
                 you're sure to find the perfect cap to match any outfit.
+              </p>
+            </div>
+            <div class="welcome-fourth welcome">
+              <h3>Socks</h3>
+              <p>
+                Our socks are made with a soft and durable fabric that provides
+                a comfortable fit all day long. Whether you're dressing up or
+                keeping it casual, our socks offer unbeatable comfort and style.
+                With a range of designs and colors to choose from, you'll find
+                the perfect pair to match any outfit.
               </p>
             </div>
           </div>
