--- a/index.html
+++ b/index.html
@@ -698,6 +698,6 @@
         <small>All right reserved</small>
       </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
