tsehay hi yilkal bye

--- a/index.html
+++ b/index.html
@@ -29,49 +29,47 @@
     <title>Hokey online shopping</title>
   </head>
   <body>
-    <div class="pre-loader"></div>
-    <header id="nav">
-      <nav>
-        <ul class="ul-el">
-          <a href="#home" class="hokey-logo">HOKEY</a>
-          <div class="ul">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#shopping">Shoping</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="null"></li>
-          </div>
-          <li class="cart-count">
-            <span class="counting"></span>
-            <img
-              class="imgs counting-logo"
-              src="counting-shopping-cart.png"
-              alt=""
-            />
-          </li>
-          <li class="burger">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-          </li>
-        </ul>
-        <div class="popup">
-          <div class="popup-container">
-            <div class="popup-handler">
-              <button class="btn-close">X</button>
-              <h3>The website is currently under construction</h3>
-              <p>
-                We're currently working hard to bring you an amazing website,
-                but it's not quite ready yet. Please check back soon for updates
-                and we can't wait to share our progress with you!
-              </p>
-              <button class="btn-clear">clear</button>
-            </div>
-          </div>
+    <!-- <div class="pre-loader"></div> -->
+
+    <nav class="nav">
+      <ul class="ul-el">
+        <a href="#home" class="hokey-logo">HOKEY</a>
+        <div class="ul">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#shopping">Shoping</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
         </div>
-      </nav>
-    </header>
-    <main>
+        <li class="cart-count">
+          <span class="counting"></span>
+          <img
+            class="imgs counting-logo"
+            src="counting-shopping-cart.png"
+            alt=""
+          />
+        </li>
+        <li class="burger">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </li>
+      </ul>
+    </nav>
+    <div class="popup">
+      <div class="popup-container">
+        <div class="popup-handler">
+          <button class="btn-close">X</button>
+          <h3>The website is currently under construction</h3>
+          <p>
+            We're currently working hard to bring you an amazing website, but
+            it's not quite ready yet. Please check back soon for updates and we
+            can't wait to share our progress with you!
+          </p>
+          <button class="btn-clear">clear</button>
+        </div>
+      </div>
+    </div>
+    <header id="nav">
       <section id="home">
         <div class="welcome-first">
           <div class="row">
@@ -90,12 +88,13 @@
 
           <img
             src="./close-up-hands-touching-clothes.jpg"
-            class="home-img img-pop"
+            class="home-img"
             alt=""
           />
         </div>
       </section>
-
+    </header>
+    <main>
       <section class="container">
         <section id="shopping">
           <h2 class="shopping-header">shop</h2>
