tsehay hi yilkal bye

--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
                 <td>Getachew Maru</td>
               </tr>
               <tr>
-                <td>1887/13</td>
-                <td>Yilkal Tesfaye</td>
+                <td>2184/13</td>
+                <td>Tsehaynesh Asrat</td>
               </tr>
             </tbody>
           </table>
