--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
   </head>
   <body>
     <!-- <div class="pre-loader"></div> -->
-
     <nav class="nav">
       <ul class="ul-el">
         <a href="#home" class="hokey-logo">HOKEY</a>
@@ -41,12 +40,14 @@
           <li><a href="#contact">Contact</a></li>
         </div>
         <li class="cart-count">
-          <span class="counting"></span>
-          <img
-            class="imgs counting-logo"
-            src="counting-shopping-cart.png"
-            alt=""
-          />
+          <a href="shop.html">
+            <span class="counting">0</span>
+            <img
+              class="imgs counting-logo"
+              src="counting-shopping-cart.png"
+              alt=""
+            />
+          </a>
         </li>
         <li class="burger">
           <div class="bar"></div>
@@ -55,20 +56,6 @@
         </li>
       </ul>
     </nav>
-    <div class="popup">
-      <div class="popup-container">
-        <div class="popup-handler">
-          <button class="btn-close">X</button>
-          <h3>The website is currently under construction</h3>
-          <p>
-            We're currently working hard to bring you an amazing website, but
-            it's not quite ready yet. Please check back soon for updates and we
-            can't wait to share our progress with you!
-          </p>
-          <button class="btn-clear">clear</button>
-        </div>
-      </div>
-    </div>
     <header id="nav">
       <section id="home">
         <div class="welcome-first">
