--- a/shop.html
+++ b/shop.html
@@ -29,7 +29,7 @@
     <title>Hokey online shopping</title>
   </head>
   <body class="body">
-    <!-- <div class="pre-loader"></div> -->
+    <div class="pre-loader"></div>
 
     <nav class="nav">
       <ul class="ul-el">
