--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>Hokey online shopping</title>
   </head>
   <body>
-    <!-- <div class="pre-loader"></div> -->
+    <div class="pre-loader"></div>
     <nav class="nav">
       <ul class="ul-el">
         <a href="#home" class="hokey-logo">HOKEY</a>
