--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <span>$39.99</span>
                 <button class="cart-add-btn">
                   <img
-                    class="imgs image-sliders img-pop"
+                    class="imgs image-sliders img-pop .big-img"
                     src="./shopping-cart.png"
                     alt=""
                   />
@@ -242,10 +242,7 @@
                 class="showcase-img imgs image-sliders"
               />
               <div class="product-desc">
-                <p>
-                  NEW Nike Air IV G Men's Size 14 Black/Fire Red-Cement
-                  CU9981-002
-                </p>
+                <p>NEW Nike Air IV G Men's Size 14 Black/Fire Red-Cement</p>
                 <span>$219.99</span>
                 <button class="cart-add-btn">
                   <img
@@ -302,7 +299,7 @@
                 class="showcase-img imgs image-sliders blue-big"
               />
               <div class="product-desc">
-                <p>New Nike running shoe</p>
+                <p>New Nike running shoe slick design</p>
                 <span>$125.59</span>
                 <button class="cart-add-btn">
                   <img
@@ -473,7 +470,7 @@
                 you can enjoy them for years to come.
               </p>
             </div>
-            <div class="welcome-third welcome">
+            <div class="welcome-sixth welcome">
               <h3>Hoddies</h3>
               <p>
                 Our hoodies are the ultimate in cozy comfort. Made with a soft
@@ -494,7 +491,7 @@
                 confidently on any surface.
               </p>
             </div>
-            <div class="welcome-fifth welcome">
+            <div class="welcome-third welcome">
               <h3>Caps</h3>
               <p>
                 Our caps are made with soft and breathable fabrics that provide
