--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
       <h3>Contact Us</h3>
       <div class="footer-container">
         <div class="footer-holder holder-one">
-          <table>
+          <!-- <table>
             <tbody>
               <tr>
                 <td colspan="2" class="dev">Developers</td>
@@ -634,7 +634,7 @@
                 <td>Tsehaynesh Asrat</td>
               </tr>
             </tbody>
-          </table>
+          </table> -->
         </div>
         <div class="footer-holder holder-two">
           <h5>On Social Media</h5>
