--- a/index.html
+++ b/index.html
@@ -603,39 +603,7 @@
     <footer id="contact">
       <h3>Contact Us</h3>
       <div class="footer-container">
-        <div class="footer-holder holder-one">
-          <!-- <table>
-            <tbody>
-              <tr>
-                <td colspan="2" class="dev">Developers</td>
-              </tr>
-              <tr>
-                <td class="th">Id</td>
-                <td class="th">Name</td>
-              </tr>
-              <tr>
-                <td>2057/13</td>
-                <td>Habtesellasie Fissha</td>
-              </tr>
-              <tr>
-                <td>2002/13</td>
-                <td>Kaleab Gizachew</td>
-              </tr>
-              <tr>
-                <td>1822/13</td>
-                <td>Yonas Tesfaye</td>
-              </tr>
-              <tr>
-                <td>2044/13</td>
-                <td>Getachew Maru</td>
-              </tr>
-              <tr>
-                <td>2184/13</td>
-                <td>Tsehaynesh Asrat</td>
-              </tr>
-            </tbody>
-          </table> -->
-        </div>
+        <div class="footer-holder holder-one"></div>
         <div class="footer-holder holder-two">
           <h5>On Social Media</h5>
 
